syntax = "proto3";
package desmos.reactions.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

import "desmos/reactions/v1/models.proto";

option go_package = "github.com/desmos-labs/desmos/v3/x/reactions/types";

// GenesisState contains the data of the genesis state for the posts module
message GenesisState {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  repeated SubspaceDataEntry subspaces_data = 1
      [ (gogoproto.nullable) = false ];
  repeated RegisteredReaction registered_reactions = 2
      [ (gogoproto.nullable) = false ];
  repeated Reaction reactions = 3 [ (gogoproto.nullable) = false ];
  repeated SubspaceReactionsParams subspaces_params = 4
      [ (gogoproto.nullable) = false ];
}

// SubspaceDataEntry contains the data related to a single subspace
message SubspaceDataEntry {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the subspace to which the data relates
  uint64 subspace_id = 1 [ (gogoproto.customname) = "SubspaceID" ];

  // Id of the next registered reaction inside the subspace
  uint32 registered_reaction_id = 2
      [ (gogoproto.customname) = "RegisteredReactionID" ];

  // Id of the next reaction inside the subspace
  uint64 reaction_id = 3 [ (gogoproto.customname) = "ReactionID" ];
}